--- a/Social_Distancing_Monitor_Face_mask_Detection.ipynb
+++ b/Social_Distancing_Monitor_Face_mask_Detection.ipynb
@@ -706,7 +706,7 @@
         "BASE_PATH = \"Social-Distancing-Analyser-and-Mask-Monitoring-AI-system-wrt-Covid-19/\"\n",
         "\n",
         "# Path to Input Video File in the BASE_PATH\n",
-        "FILE_PATH = \"test_video.mp4\""
+        "FILE_PATH = \"test (1).mp4\""
       ],
       "execution_count": 31,
       "outputs": []
